feat: added unit tests for service layer, added documentation, added coffiene integration, modified docker compose file